commit: 再再次更改

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,6 @@ extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
   - _js/katex.js
 
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.0/katex.min.css
+
