--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,8 @@ markdown_extensions:
   - pymdownx.arithmatex  
   - pymdownx.betterem  
   - pymdownx.tasklist 
-
+  - admonition
+  
 nav:
   - "🚩 从这里开始":
     - "封面": index.md
@@ -28,6 +29,10 @@ nav:
       - course_note/D1_DM/Chapter5.md
     - "♣️ 大一下|数据结构基础":
       - course_note/D1_DS/Chapter4.md
+  - "💻 算法学习":
+    - "关于": algorithm/index.md
+    - "分治算法" : algorithm/divide.md
+    - "搜索与图论" : algorithm/searchgraph.md
   - "🔉 碎碎念":
     - others/软件宣讲会笔记.md
 
