--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,17 +30,22 @@ nav:
     - "♣️ 大一下|数据结构基础":
       - course_note/D1_DS/Chapter4.md
   - "💻 算法学习":
-    - "关于": algorithm/index.md
+    - "🏠 首页": algorithm/index.md
     - "分治算法" : algorithm/divide.md
     - "搜索与图论" : algorithm/searchgraph.md
+  - "🧾 语言学习":
+    - "🏠 首页": language/index.md
+    - "cpp": 
+      - language/cpp/read&write.md
+      - language/cpp/stl.md
   - "🔉 碎碎念":
     - others/软件宣讲会笔记.md
 
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js
-  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
+  - https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.js
+  - https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/contrib/auto-render.min.js
   - _js/katex.js
 
 extra_css:
-  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.0/katex.min.css
+  - https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.min.css
 
