--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - course_note/D1_DM/Chapter1.md
       - course_note/D1_DM/Chapter2.md
       - course_note/D1_DM/Chapter5.md
+      - course_note/D1_DM/Chapter6.md
     - "♣️ 大一下|数据结构基础":
       - course_note/D1_DS/Chapter4.md
   - "💻 算法学习":
